src/v8/CAPI_Topology.pas


//------------------------------------------------------------------------------
function Topology_Get_FirstLoad():Integer;cdecl;
var
  node: TCktTreeNode;
  elm: TDSSCktElement;
begin
  Result := 0;
  node := ActiveTreeNode;
  if assigned(node) then begin
    elm := node.FirstShuntObject;
    if assigned(elm) then begin
      ActiveCircuit[ActiveActor].ActiveCktElement := elm;
      Result := 1;
    end;
  end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NextLoad():Integer;cdecl;
var
  node: TCktTreeNode;
  elm: TDSSCktElement;
begin
  Result := 0;
  node := ActiveTreeNode;
  if assigned(node) then begin
    elm := node.NextShuntObject;
    if assigned(elm) then begin
      ActiveCircuit[ActiveActor].ActiveCktElement := elm;
      Result := 1;
    end;
  end;
end;
//------------------------------------------------------------------------------
function Topology_Get_NumIsolatedLoads():Integer;cdecl;
var
  elm: TPCElement;
  topo: TCktTree;
begin
  Result := 0;
  topo := ActiveTree;
  if Assigned(topo) then begin
    elm := ActiveCircuit[ActiveActor].PCElements.First;
    while assigned (elm) do begin
      if elm.IsIsolated then Inc (Result);
      elm := ActiveCircuit[ActiveActor].PCElements.Next;
    end;
  end;
end;
//------------------------------------------------------------------------------
function Topology_Get_ActiveLevel():Integer;cdecl;
begin
  Result := Topology_Get_ActiveBranch;
end;
//------------------------------------------------------------------------------
function Topology_Get_BusName_AnsiString():AnsiString;inline;
var
  node: TCktTreeNode;
  elm: TDSSCktElement;
begin
  Result := '';
  node := ActiveTreeNode;
  if assigned(node) then begin
    elm := node.CktObject;
    if assigned(elm) then Result := elm.FirstBus;
  end;
end;

function Topology_Get_BusName():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Topology_Get_BusName_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Topology_Set_BusName(const Value: PAnsiChar);cdecl;
var
  topo: TCktTree;
  S, B: String;
  Found :Boolean;
  elem: TDSSCktElement;
  pdElem: TPDElement;
begin
  Found := FALSE;
  elem := nil;
  S := Value;  // Convert to Pascal String
  topo := ActiveTree;
  if assigned(topo) then begin
    elem := ActiveCircuit[ActiveActor].ActiveCktElement;
    pdElem := topo.First;
    while Assigned (pdElem) and (not found) do begin
      B := pdElem.FirstBus;
      while Length(B) > 0 do begin
        if (CompareText(B, S) = 0) then begin
          ActiveCircuit[ActiveActor].ActiveCktElement := pdElem;
          Found := TRUE;
          Break;
        end;
        B := pdElem.NextBus;
      end;
      pdElem := topo.GoForward;
    end;
  end;
  if not Found then Begin
    DoSimpleMsg('Bus "'+S+'" Not Found in Active Circuit Topology.', 5003);
    if assigned(elem) then ActiveCircuit[ActiveActor].ActiveCktElement := elem;
  end;
end;
//------------------------------------------------------------------------------
END.
